# Rustypipes

./: .travis.yml  Cargo.toml  README.md  codecov.yml
src/: client.rs  lib.rs  main.rs  message.rs  misc.rs  server.rs
src/cap/: mod.rs
src/pipes/: mod.rs
src/serializer/: mod.rs
tests/: rustypipes.rs
