[package]
name = "rustypipes"
version = "0.1.0"
authors = ["ChristianVisintin <christian.visintin1997@gmail.com>"]
edition = "2018"
license = "MIT"
license_file = "LICENSE"
description = "Rustypipes is a Rust library to implement Octopipes clients and servers."
homepage = "https://github.com/ChristianVisintin/Octopipes"
repository = "https://github.com/ChristianVisintin/Octopipes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unix-named-pipe = "0.2.0"
bitflags = "1.2.1"

[lib]
name = "rustypipes"
path = "src/lib.rs"
