[package]
name = "rustypipes"
version = "0.1.1"
authors = ["ChristianVisintin <christian.visintin1997@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Rustypipes is a Rust library to implement Octopipes clients and servers."
homepage = "https://github.com/ChristianVisintin/Rustypipes"
repository = "https://github.com/ChristianVisintin/Rustypipes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unix-named-pipe = "0.2.0"
bitflags = "1.2.1"

[lib]
name = "rustypipes"
path = "src/lib.rs"
