[package]
name = "rustypipes"
version = "0.2.0"
authors = ["ChristianVisintin <christian.visintin1997@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Rustypipes is a Rust library to implement Octopipes clients and servers."
homepage = "https://github.com/ChristianVisintin/Rustypipes"
repository = "https://github.com/ChristianVisintin/Rustypipes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"

[target.'cfg(any(unix, macos, linux))'.dependencies]
unix-named-pipe = "0.2.0"

[target.'cfg(windows)'.dependencies]
windows-named-pipe = "0.1.0"

[lib]
name = "rustypipes"
path = "src/lib.rs"
